fix: resolve tooltip to be rendered in body, change z-indexes

--- a/src/assets/styles/components/_popover.scss
+++ b/src/assets/styles/components/_popover.scss
@@ -11,7 +11,7 @@
   padding: var(--space-12);
   max-width: var(--size-240);
   max-height: 216px;
-  z-index: 9999;
+  z-index: 101;
   white-space: normal;
 
   &:after {
