--- a/src/assets/styles/components/_select.scss
+++ b/src/assets/styles/components/_select.scss
@@ -143,7 +143,7 @@
   }
 
   &--menu {
-    z-index: 9999;
+    z-index: 101;
     position: fixed;
     background-color: var(--white);
     box-shadow: var(--shadow-2);
