--- a/src/assets/styles/components/_tooltip.scss
+++ b/src/assets/styles/components/_tooltip.scss
@@ -25,7 +25,7 @@
   filter: drop-shadow(#{var(--ds-tooltip-shadow)});
   max-width: var(--ds-tooltip-max-width);
   padding: var(--ds-tooltip-padding);
-  z-index: 999999;
+  z-index: 103;
 
   &:after {
     content: "";
